--- a/client/style.css
+++ b/client/style.css
@@ -5,6 +5,7 @@
 @layer components {
     .container {
         @apply p-4 mr-5 mb-4 grow border border-gray-400 rounded shadow-md;
+        @apply dark:bg-gray-800 dark:border-gray-600;
     }
 
     hr {
